Update test.yml for Azure Pipelines

--- a/.azure-pipelines/test.yml
+++ b/.azure-pipelines/test.yml
@@ -109,7 +109,7 @@ stages:
         displayName: 'Download artifacts'
         inputs:
           artifactName: 'driftfx_natives'
-          downloadPath: 'artifacts/'
+          downloadPath: 'artifacts'
       - task: Bash@3
         inputs:
           targetType: 'inline'
