Update test.yml for Azure Pipelines

--- a/.azure-pipelines/test.yml
+++ b/.azure-pipelines/test.yml
@@ -159,6 +159,7 @@ stages:
           command: 'publish'
           publishDirectory: 'dist'
           feedsToUsePublish: 'internal'
-          vstsFeedPublish: 'fdb4ce06-5bd6-47b3-ac78-d72cf66c9692'
+          vstsFeedPublish: 'driftfx'
+          vstsFeedPackagePublish: 'driftfx_dist'
           versionOption: 'patch'
       
