--- a/.azure-pipelines/test.yml
+++ b/.azure-pipelines/test.yml
@@ -135,6 +135,7 @@ stages:
           mavenVersionOption: 'Default'
       - task: Bash@3
         inputs:
+          targetType: 'inline'
           script: |
             mkdir ~/.m2
             mv -v settings.xml ~/.m2/settings.xml
