--- a/.azure-pipelines/test.yml
+++ b/.azure-pipelines/test.yml
@@ -146,34 +146,7 @@ stages:
           mavenVersionOption: 'Default'
       - task: Bash@3
         inputs:
-          targetType: 'inline'
-          script: |
-            mkdir dist
-            zip -r dist/sources.zip native org.eclipse.fx.drift org.eclipse.fx.drift.feature org.eclipse.fx.drift.samples org.eclipse.fx.drift.samples.feature
-            echo "$(Build.SourceVersion)" > dist/git_commit
-            mkdir dist/include
-            cp -R native/DriftFX/include/* dist/include/
-            mkdir dist/libs
-            cp -R artifacts/driftfx_natives/* dist/libs/
-            zip -r dist.zip dist/*
-      - task: PublishBuildArtifacts@1
-        inputs:
-          PathtoPublish: dist.zip
-          ArtifactName: driftfx
-      - task: PublishBuildArtifacts@1
-        inputs:
-          PathtoPublish: org.eclipse.fx.drift.updatesite/target/org.eclipse.fx.drift.updatesite-0.1.0-SNAPSHOT.zip
-          ArtifactName: driftfx
-      - task: PublishPipelineArtifact@1
-        inputs:
-          targetPath: org.eclipse.fx.drift.updatesite/target/org.eclipse.fx.drift.updatesite-0.1.0-SNAPSHOT.zip
-          artifact: 'driftfx-updatesite'
-      - task: UniversalPackages@0
-        inputs:
-          command: 'publish'
-          publishDirectory: 'dist'
-          feedsToUsePublish: 'internal'
-          vstsFeedPublish: 'driftfx'
-          vstsFeedPackagePublish: 'driftfx_dist'
-          versionOption: 'patch'
-      
+         targetType: inline
+         script: |
+           STATUS=`curl -s -w "%{http_code}" "$(Webhook.Url)/buildWithParameters?token=$(Webhook.Token)&BUILD_NUMBER=$(Rev)&BRANCH_NAME=$(Build.SourceBranchName)"
+           echo 'Triggered Jenkins: $STATUS'
