--- a/.azure-pipelines/test.yml
+++ b/.azure-pipelines/test.yml
@@ -148,5 +148,6 @@ stages:
         inputs:
          targetType: inline
          script: |
+           echo "$WEBHOOK_URL/buildWithParameters?token=xxx&BUILD_NUMBER=$REV&BRANCH_NAME=$(Build.SourceBranchName)"
            STATUS=`curl -v -w "%{http_code}" "$WEBHOOK_URL/buildWithParameters?token=$WEBHOOK_TOKEN&BUILD_NUMBER=$REV&BRANCH_NAME=$(Build.SourceBranchName)"`
            echo 'Triggered Jenkins: $STATUS'
